--- a/source/_posts/文章是如何生成的.md
+++ b/source/_posts/文章是如何生成的.md
@@ -1,22 +1,21 @@
 ---
-title: 正儿八经的第一篇博文
+title:影视媒体与销售之路 #我的第一次创业# 
 ---
 
-第一次用 markdown 写文章，感觉有点奇怪
+2018-2019年是我第一次自己创业，拿下了广西省的总代理，专门销售中老年鞋。我怀揣着自己的梦想，在桂林这座小城开启了4家门店，第一次以线上电视投放广告以及线下门店销售的形式，敲开了社会的大门。
 
-## 这是一个大标题
+## 线上投放 
+  舒悦中老年鞋，始于上海，通过长辈的人脉资源，了解到总部是一个在精致的上海老太太、爷爷们之间的一个时髦的商品。在中央电视台7台播放广告且有知名演员濮存昕代言。他们的放送逻辑是，在总部以中央电视台的推广，结合线下各个省市的电视台进行宣传，自上而下的宣传模式。且精准的把握到，目前看电视的人群里多为老年人，他们往往是社会中观看电视时长最多的人。
+  于是我联系了桂林电视台，在他们频道进行播放。：）
 
-### 这是一个小标题
+## 线下销售
+  我的团队里都是比我大的阿姨们，我开了4家门店，每天都会去不同的店铺培训、管理、整理系统、配货。：）
+  
+## 订单派送
+2019年日记
+从来没有想过做老年行业
+有次去送货，那个婆婆说自己脚跛了，别人有时候会笑话她的瘸。。。但是婆婆很开心，能买到一双防滑的鞋子，穿的舒服说我们这个鞋好，很感谢我们能给她送过去，一直再说谢谢你们，谢谢你们。我突然觉得，虽然很辛苦，但是阿婆能开开心心，健健康康的，这个事业对我来说格外美好。我也会加油成长！希望阿公阿婆们都能长命百岁：）
+## 困难与挫折
+### 雨季拯救物资
 
-#### 这是更小的标题
-这是正文：）
 
-然后这是 [链接](https://example.com)
-这个是图片 ![图片名字](./11111.jpg)
-
-接下来是 list 列表
--   列表1
--   列表2
--   列表4
-
-尝试更新博客，有点意思～
